# cmake-simple-lib

./: CMakeLists.txt  private.c  private.h  public.c
